--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "back",
+  "name": "api-seed",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "lint": "eslint . --ext .ts,.tsx --rulesdir rules",
+    "lint-fix": "eslint . --ext .ts,.tsx --fix --rulesdir rules",
+    "format": "prettier --write 'src/**/*'"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +21,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "concurrently": "^8.0.1",
+    "eslint": "^8.24.0",
     "nodemon": "^2.0.22",
+    "prettier": "^2.7.1",
     "typescript": "^5.0.4"
   }
 }
