--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "lint": "eslint . --ext .ts,.tsx --rulesdir rules",
-    "lint-fix": "eslint . --ext .ts,.tsx --fix --rulesdir rules",
+    "start": "nodemon -r dotenv/config src/index.ts dotenv_config_path=env/development.env",
+    "lint": "eslint . --ext .ts --rulesdir rules",
+    "lint-fix": "eslint . --ext .ts --fix --rulesdir rules",
     "format": "prettier --write 'src/**/*'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
